incubator/external-service/entrypoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: out-svc
  namespace: default
subsets:
- addresses:
  - ip: 192.168.100.230
  ports:
  - name: out
    port: 81
    protocol: TCP
