incubator/external-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: out-svc
  namespace: default
spec:
  ports:
  - name: out
    port: 81
    protocol: TCP
    targetPort: 81
  sessionAffinity: None
  type: ClusterIP
